@startuml


class "{abstract} \n Command"  {
         +actions: String[]
         +requiredParamsList: Pair[][]
         +optionalParamsList: Pair[][]
         +name: CommandEnum
         +action: String
         +requiredParams: String[]
         +optionalParams: String[]

         +Command(CommandEnum name, String[] actions, Pair[][] requiredParamsList, Pair[][] optionalParamsList)
         +FindCommand(reviews: ReviewList, searchTerm: String)
         +void execute(Data data, Ui ui)
         +boolean isExit()
         +CommandEnum getCommandName()
            +String[] getActions()
            +String getAction()
            +int getActionNo(String action)
            +void setAction(String action)
            +void setParams(String[] requiredParams, String[] optionalParams)

}


class ExpenseCommand {
    +formatter: DateTimeFormatter.ofPattern(Constants.ACCEPTABLE_DATE_FORMAT.toString());
    +ACTIONS: String[]
    +ACTIONS_REQUIRED_PARAMS: Pair[][]
    +ACTIONS_OPTIONAL_PARAMS: Pair[][]
     +void execute(Data data, Ui ui)
     +void executeAddExpense(ExpenseAction expenseAction, String[] requiredParams, String[] optionalParams, ArrayList<Budget> budgets)
     +void executeDelExpense(ExpenseAction expenseAction, String[] requiredParams)     +void executeBudgetHelp(BudgetAction budgetAction)
     +void executeClearExpense(ExpenseAction expenseAction, String[] optionalParams)
     +void executeListExpense(ExpenseAction expenseAction, String[] optionalParams)
     +void executeHelpExpense(ExpenseAction expenseAction)
     +void executeFindExpense(ExpenseAction expenseAction, String[] requiredParams)
     +boolean isExit()
}

class Data {
+ budgets: ArrayList<Budget>
+ deposits: ArrayList<Deposit>
+ expenses: ArrayList<Expense>
+ Data importData()
+ void exportData()

}

class Ui {
+ String readInput()
+ void printMessage(String... messages)
+ void printErrorMessage(String message)
+ void greetUser()
+ void byeUser()
}

class Budget {
    +Budget(String name, double amount)
}

class Expense {
    +date: LocalDate
    +category: String
    +Expense(String category, String name, double amount, LocalDate date)
    +String getCategory()
    +LocalDate getDate()
}

class Deposit {
    +date: LocalDate
    +Deposit(String name, double amount, LocalDate date)
    +LocalDate getDate()
}






"{abstract} \n Command" <|-down- ExpenseCommand
"{abstract} \n Command" <|-right- Ui
"{abstract} \n Command" <|-left- Data


"Budget" <|-down-"\n0..  " Data
"Expense" <|-right "0.. "Data
"Deposit" <|-up-"0..  " Data



@enduml